# SDDtest

./: .env  README.md  employees.db  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  record-template.md  spec-template.md  tasks-template.md
migrations/: alembic.ini  env.py
migrations/versions/: 001_create_employees_table.py
record/: 2026-04-02_constitution-init.md  2026-04-02_employee-crud-api-spec.md  2026-04-02_prompt-simplification.md  2026-04-02_record-automation.md  INDEX.md
record/2026-04-02/: INDEX.md  employee-crud-api-planning.md  spec-requirements-recreation.md  template-correction.md
record/2026-04-03/: INDEX.md  phase-1-2-implementation.md  tasks-generation.md
specs/001-employee-crud-api/: spec.md
specs/001-employee-crud-api-plan/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-employee-crud-api-plan/contracts/: README.md  employee-api.openapi.json
specs/001-employee-crud-api/checklists/: requirements.md
src/: __init__.py  config.py  database.py  main.py
src/api/: employees.py
src/models/: employee.py
src/schemas/: employee.py
src/utils/: error_handlers.py  logging_config.py
tests/contract/: __init__.py
